# carcas_2d_engine

./: .gitmodules  CMakeLists.txt  README.md  downloader.cpp  downloader.h  game.cpp  globals.cpp  graphics.h  ilevel.h  languages.cpp  level-logo.cpp  level-logo.h  main.cpp  object.h  shader-simple-2d-opengl.cpp  shader-simple-2d-opengl.h  shader.h  shaders.cpp  sprite.cpp  sprite.h  text.h  texter.cpp  texter.h
assets/: logo.res  main.vert
assets/lang/: rus.txt
src/: CMakeLists.txt  main.cpp  to_download.h  translates.h
src/core/: downloader.cpp  downloader.h  events.h  game.cpp  game.h  globals.cpp  globals.h  graphics.h  ilevel.h  languages.h  link-opengl.cpp  link-opengl.h  link.h  object.h  opengles.cpp  opengles.h  shader.h  shaders.cpp  shaders.h  sound.cpp  sound.h  sound_android.cpp  sound_android.h  sound_linux.cpp  sound_linux.h  texter.cpp  texter.h
src/levels/: level-logo.cpp  level-logo.h  levels.h
src/objects/: sprite.cpp  sprite.h  sprite_int.cpp  sprite_int.h
src/shaders/: shader-simple-2d-opengl.cpp  shader-simple-2d-opengl.h  shader-simple-2d-opengl_int.cpp  shader-simple-2d-opengl_int.h
